# lfsm

./: CMakeLists.txt  README
example/: example.cpp
include/: FSM.hpp  IFSM.hpp  event.hpp  guard.hpp  key.hpp  names.hpp  state.hpp  ternarFSM.hpp  transition.hpp  transition_table.hpp  typelist.hpp  types.hpp
